--- a/scrappyfile/emailformat.html
+++ b/scrappyfile/emailformat.html
@@ -11,20 +11,13 @@
         <table width="600" cellpadding="0" cellspacing="0" border="0" style="background:#ffffff; border-radius:8px; overflow:hidden; box-shadow:0 0 10px rgba(0,0,0,0.1);">
           <tr>
             <td style="background-color:#222831; padding: 20px; text-align: center; color: white;">
-              <h1 style="margin:0; font-size: 28px;">📰 Daily News Summary</h1>
-              <p style="margin:0; font-size: 14px; color: #cccccc;">Your handpicked headlines</p>
+              <h1 style="margin:0; font-size: 28px;"> Daily News Summary </h1>
+              <p style="margin:0; font-size: 14px; color: #cccccc;">Your Handpicked Headlines</p>
             </td>
           </tr>
 
           <!-- START LOOP HERE -->
-          <tr>
-            <td style="padding: 20px; border-bottom:1px solid #eeeeee;">
-              <h2 style="margin:0 0 10px 0; font-size:20px; color:#333333;">[TITLE]</h2>
-              <p style="margin:0 0 10px 0; font-size:15px; color:#555555;">[SUMMARY]</p>
-              <a href="[URL]" style="font-size:14px; color:#1e88e5; text-decoration:none;">Read more →</a>
-              <p style="margin-top:10px; font-size:12px; color:#888888;">Topic: [TOPIC]</p>
-            </td>
-          </tr>
+          
           <!-- END LOOP HERE -->
 
           <tr>
