--- a/scrappyfile/emailformat.html
+++ b/scrappyfile/emailformat.html
@@ -22,8 +22,7 @@
 
           <tr>
             <td style="background:#eeeeee; padding:15px; text-align:center; font-size:12px; color:#555555;">
-              You received this email because you subscribed to the Daily News Digest.<br>
-              <a href="#" style="color:#1e88e5; text-decoration:none;">Unsubscribe</a>
+              You received this email because you subscribed to the Daily News Digest<br>
             </td>
           </tr>
         </table>
